# raytracing

./: .gitignore  CMakeLists.txt  README.md
docs/: STEPS.md
include/: Ray.h  Vector3.h
src/: main.cpp
